@@ -1,5 +1,11 @@
 2007-02-07  Martin Leidig  <mleidig@schlund.de>
 
+	* src/de/schlund/pfixxml/util/XsltProvider.java: Added automatic
+	Saxon version availability check to avoid NoClassDefFoundErrors
+	if XSLT1 or XSLT2 version isn't available.
+
+2007-02-07  Martin Leidig  <mleidig@schlund.de>
+
 	* projects/core/conf/server-config.wsdd: Added
 	* projects/common/conf/server-config.wsdd: Removed as obsolete
 	* skel/projects/common/conf/server-config.wsdd: Removed as obsolete
